--- a/strfry.conf
+++ b/strfry.conf
@@ -70,6 +70,17 @@ relay {
 
         # List of supported lists as JSON array, or empty string to use default. Example: "[1,2]"
         nips = ""
+
+        # Add the following lines to include payments_url and fees
+        payments_url = "https://noderunners.azzamo.net"
+        fees = {
+            "subscription": [
+                {
+                    "amount": 10000000,
+                    "unit": "msats"
+                }
+            ]
+        }
     }
 
     # Maximum accepted incoming websocket frame size (should be larger than max event) (restart required)
