--- a/src/apps/relay/golpe.yaml
+++ b/src/apps/relay/golpe.yaml
@@ -34,6 +34,21 @@ config:
     desc: "List of supported lists as JSON array, or empty string to use default. Example: \"[1,2]\""
     default: ""
 
+  - name: relay__info__payments_url
+    desc: "NIP-11: URL for handling payments"
+    default: "https://noderunners.azzamo.net"
+  - name: relay__info__fees
+    desc: "NIP-11: Fee structure for subscriptions"
+    default: |
+      {
+        "subscription": [
+          {
+            "amount": 10000000,
+            "unit": "msats"
+          }
+        ]
+      }
+
   - name: relay__maxWebsocketPayloadSize
     desc: "Maximum accepted incoming websocket frame size (should be larger than max event)"
     default: 131072
